--- a/chirpAPI/appsettings.json
+++ b/chirpAPI/appsettings.json
@@ -1,13 +1,47 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
 
     "ConnectionStrings": {
         "Default": "Host=localhost;Port=5432;Database=cinguettio;Username=postgres;Password=superpippo;"
+    },
+
+    "Serilog": {
+        "Using": [ "Serilog.Sinks.File" ],
+        "MinimumLevel": "Debug",
+        "WriteTo": [
+            
+            {
+                "Name": "File",
+                "Args": { "path": "Logs/log.txt" }
+            }
+        ],
+        "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+        "Destructure": [
+            {
+                "Name": "With",
+                "Args": { "policy": "Sample.CustomPolicy, Sample" }
+            },
+            {
+                "Name": "ToMaximumDepth",
+                "Args": { "maximumDestructuringDepth": 4 }
+            },
+            {
+                "Name": "ToMaximumStringLength",
+                "Args": { "maximumStringLength": 100 }
+            },
+            {
+                "Name": "ToMaximumCollectionCount",
+                "Args": { "maximumCollectionCount": 10 }
+            }
+        ],
+        "Properties": {
+            "Application": "Sample"
+        }
     }
 }
