Refactor chirp API with new services and DTOs
- Updated CinguettioContext to improve security and entity configurations.
- Enhanced ChirpsController to use service layer and added logging.
- Integrated Swagger for API documentation in Program.cs.
- Modified launchSettings.json for updated application URLs.
- Improved Serilog configuration in appsettings.json for better logging.
- Added new package references for Serilog and Swagger in csproj.
- Removed unused Class1.cs and ChirpFilter.cs files.
- Updated IChirpsService interface with new methods for chirp operations.
- Implemented new service methods in LaChirpServices for CRUD operations.
- Introduced ChirpCreateDTO and ChirpUpdateDTO for data handling.
- Updated ChirpViewModel to reflect new data structure.
- Added ChirpFilter class to enhance querying capabilities.

--- a/chirpAPI/appsettings.json
+++ b/chirpAPI/appsettings.json
@@ -12,36 +12,30 @@
     },
 
     "Serilog": {
-        "Using": [ "Serilog.Sinks.File" ],
-        "MinimumLevel": "Debug",
+        "Using": [ "Serilog.Sinks.File", "Serilog.Sinks.Console" ],
+        "MinimumLevel": "Information",
         "WriteTo": [
-            
+
             {
                 "Name": "File",
-                "Args": { "path": "Logs/log.txt" }
+                "Args": {
+                    "path": "Logs/log-.txt",
+                    "rollingInterval": "Day",
+                    "retainFileCountLimit": 100,
+                    "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level:u3}] {Message:lj}{NewLine}{Exception}",
+                    "restrictToMinimumLevel": "Information"
+                    
+
+                }
+            }, 
+            {
+                "Name": "Console",
+                "Args": {
+                    "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level:u3}] {Message:lj}{NewLine}{Exception}",
+                    "restrictToMinimumLevel": "Information"
+                }
             }
-        ],
-        "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
-        "Destructure": [
-            {
-                "Name": "With",
-                "Args": { "policy": "Sample.CustomPolicy, Sample" }
-            },
-            {
-                "Name": "ToMaximumDepth",
-                "Args": { "maximumDestructuringDepth": 4 }
-            },
-            {
-                "Name": "ToMaximumStringLength",
-                "Args": { "maximumStringLength": 100 }
-            },
-            {
-                "Name": "ToMaximumCollectionCount",
-                "Args": { "maximumCollectionCount": 10 }
-            }
-        ],
-        "Properties": {
-            "Application": "Sample"
-        }
+        ]
+
     }
 }
